# my-neural-network-lib

./: CMakeLists.txt  conanfile.py
src/: CMakeLists.txt  MyNeuralNetworkLib.cpp  MyNeuralNetworkLib.h  MyNeuralNetworkLibApi.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
